Tests/CarlTests/CompilerTests/negative/too-much-parameters.carl
automaton GameOfLife {
    world {
        states { Dead, Alive }
        neighborhood: Moore(1)
        dimension: 2
    }

    rules {
        Dead -> Alive when count_neighbors(Alive) == 3
        Alive -> Dead when count_neighbors(Alive, Dead) < 2 or count_neighbors(Alive) > 3
    }
}
